@@ -1,5 +1,10 @@
 $Id$
 
+2016-02-02  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsiprint.cpp: output unavailable rather than 255C for Drive
+        Trip temperature; skip background scan lpage for tape drives
+
 2016-02-02  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
